--- a/analyses/Analyses - Random Forests v3.Rmd
+++ b/analyses/Analyses - Random Forests v3.Rmd
@@ -46,6 +46,8 @@ knit_hooks$set(output = function(x, options) {
   + It does not subset the data into test or train
     + although I am reconsidering this
   + It only models 'filtered symptoms (5 groups)
+    + is it better to ignore the other symptoms or group them all as 'unhealthy'
+    + also worth considering whether dead tops should be grouped. 
 
 
 ### Purpose
@@ -77,6 +79,7 @@ All of the data used in the below analyses are described in the [Data Wrangle fo
     + does it make sense to group dead tops?
     + try hyperparameter tuning to determine best parameters for model (see https://www.youtube.com/watch?v=Ptd2NXdtHl4 and https://jsimkins2.github.io/geog473-673/random-forest-modeling.html) 
     + remove climate data for individual months?
+    + check whether valu1 data are available in gssurgo data in addition to muaggat and component
 
 
 ### Notes from meeting with MC
