Extracted climate data for iNat observations

--- a/data-visualization/Data Visualization and Exploration v2.Rmd
+++ b/data-visualization/Data Visualization and Exploration v2.Rmd
@@ -11,7 +11,8 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-knitr::opts_knit$set(root.dir = "/Users/redcedar/ServerFiles/redcedar/") 
+knitr::opts_knit$set(root.dir = "/Users/redcedar/ServerFiles/redcedar/")
+#knitr::opts_knit$set(root.dir = "/Users/pnwbi/ServerFiles/redcedar")
 ```
 
 
